GERONIMO-3404 GERONIMO-3406  Fix the return values from login module lifecycle methods and add some javadoc and a little code cleanup
git-svn-id: https://svn.apache.org/repos/asf/geronimo/server/trunk@565599 13f79535-47bb-0310-9956-ffa450edef68